reader-node/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readwrite-svc
spec:
  type: ClusterIP
  selector:
    app: readwrite-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
